<resources>
    <string name="app_name">My Application</string>
    <string name="entrar">ENTRAR</string>
    <string name="email">EMAIL</string>
    <string name="senha">SENHA</string>
    <string name="link_cadastro">Não tem conta? Cadastre-se</string>
    <string name="telefone">TELEFONE</string>
    <string name="nome">NOME</string>
    <string name="link_login">Já tem conta? Faça o login</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="usuario">USUÁRIO</string>
    <string name="logo_description">Logo do aplicativo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>